--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ ul li {
 
 .dashboard {
   background: #d9d9d9;
-  width: 83vw;
+  width: 73vw;
   height: 100vh;
 }
 
@@ -82,7 +82,7 @@ ul li {
 .received_request_box {
   /* background-color: aqua; */
   background: #ffffff;
-  width: 80%;
+  width: 100%;
   height: 20vh;
   margin-bottom: 3rem;
   padding: 1.5rem;
@@ -92,7 +92,7 @@ ul li {
 .completed_request_box {
   /* background-color:red; */
   background: #ffffff;
-  width: 80%;
+  width: 100;
   height: auto;
   margin-bottom: 3rem;
   padding: 1.5rem;
@@ -207,6 +207,9 @@ ul li {
   color: #85c371;
   font-family: "Lato";
   padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #holidayInn{
