--- a/src/index.css
+++ b/src/index.css
@@ -246,7 +246,7 @@ ul li {
   padding: 9px;
   border-radius: 5px;
   text-align: center;
-  font-family: "Lato";
+  font-family: "Poppins";
   font-size: 12px;
   float: right;
   position: absolute;
