--- a/src/index.css
+++ b/src/index.css
@@ -290,3 +290,9 @@ ul li {
   font-family: "Lato";
   font-weight: bold;
 }
+
+@media screen and (max-width:1000px) {
+  .dashboard{
+    height: auto; 
+  }
+}
