--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,8 @@ ul li {
   /* background-color: aqua; */
   background: #ffffff;
   width: 100%;
-  height: 20vh;
+  /* height: 20vh; */
+  height: auto;
   margin-bottom: 3rem;
   padding: 1.5rem;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
@@ -155,6 +156,7 @@ ul li {
   display: flex;
   justify-content: space-between;
   font-family: sans-serif;
+  margin-bottom: 1rem;
 }
 
 .completed_status-bar {
